rearranging directory and improvement

--- a/jsdoc/patch-jsdoc/docdash/jsdoc.css
+++ b/jsdoc/patch-jsdoc/docdash/jsdoc.css
@@ -465,7 +465,9 @@ footer {
 
 .prettyprint > code {
   padding: 15px;
+  width:fit-content
 }
+
 
 .prettyprint .linenums code {
   padding: 0 15px
