--- a/test-componentsHTML/components/modal-pop-up/pop-up.html
+++ b/test-componentsHTML/components/modal-pop-up/pop-up.html
@@ -1,8 +1,7 @@
 
 <div class="Modal_Screen blue" >
+
 	<div class="modal-dlg" id="modal-dlg" draggable="true">
-
-
 		<div class="title">new popin modal</div>
 		<div class="left-box-status none" id="iconStatus">
 
@@ -12,35 +11,35 @@
 			</div>
 
 			<div class="warning">
-				<img alt="Warning" src="components/pop-up/icon/ICO_Warning.svg">
+				<img alt="Warning" src=" icon/ICO_Warning.svg">
 			</div>
 			<div class="question">
-				<img alt="Question" src="components/pop-up/icon/ICO_Question.svg">
+				<img alt="Question" src="icon/ICO_Question.svg">
 			</div>
 			<div class="info">
-				<img alt="Info" src="components/pop-up/icon/ICO_Instruction.svg">
+				<img alt="Info" src="icon/ICO_Instruction.svg">
 			</div>
 			<div class="error">
-				<img alt="Error" src="components/pop-up/icon/ICO_ExamStatus_Error.svg">
+				<img alt="Error" src="icon/ICO_ExamStatus_Error.svg">
 			</div>
 
 			<div class="success">
-				<img alt="Success" src="components/pop-up/icon/UI_CheckMark.svg">
+				<img alt="Success" src="icon/UI_CheckMark.svg">
 			</div>
 
 			<div class="valid">
-				<img alt="valid" src="components/pop-up/icon/ICO_Checked_Orange.svg">
+				<img alt="valid" src="icon/ICO_Checked_Orange.svg">
 			</div>
 
 			<div class="progress">
-				<img alt="Progress" src="components/pop-up/icon/ICO_Progress.svg">
+				<img alt="Progress" src="icon/ICO_Progress.svg">
 			</div>
 			<div class="wait play">
 				<div  ></div>
 				<div class="spinner-count" id="wait"></div>
 			</div>
 			<div class="input">
-				<img alt="Input" src="components/pop-up/icon/ICO_Movment.png">
+				<img alt="Input" src="icon/ICO_Movment.png">
 			</div>
 		</div>
 
